--- a/Python/learning/PythonForDigitalHumanities/contents.html
+++ b/Python/learning/PythonForDigitalHumanities/contents.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-11-18 Fri 00:35 -->
+<!-- 2022-11-18 Fri 01:07 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Python for Digital Humanities</title>
@@ -247,169 +247,192 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org392f8f7">1. Lesson 1 INTRODUCTION TO PYTHON FOR DIGITAL HUMANITIES</a></li>
-<li><a href="#org493a372">2. PART 1 WORKING WITH DATA IN PYTHON SCRIPTS</a>
+<li><a href="#org6121e12">1. Lesson 1 INTRODUCTION TO PYTHON FOR DIGITAL HUMANITIES</a>
 <ul>
-<li><a href="#orgaa0a738">2.1. Lesson 2: Story Data in PYthon Script</a></li>
-<li><a href="#orgfb6f3ac">2.2. Lesson 3: Interacting with Strings in a Python Script</a></li>
-<li><a href="#orga8c4854">2.3. Lesson 4: Interacting with Numbers in Python (Integers and Floats)</a></li>
+<li><a href="#org2eaed1a">1.1. Resources</a></li>
+<li><a href="#orga265c7f">1.2. Requirements</a></li>
+<li><a href="#org6208d46">1.3. Acknowledgements</a></li>
 </ul>
 </li>
-<li><a href="#orgd33e87e">3. PART 2 DATA STRUCTURES IN PYTHON</a>
+<li><a href="#orgb452ac8">2. PART 1 WORKING WITH DATA IN PYTHON SCRIPTS</a>
 <ul>
-<li><a href="#org6d7dad2">3.1. Lesson 5: Creating and Working with Types in Python</a></li>
-<li><a href="#orgf8c2bb5">3.2. Lesson 6: Creating and Working with Lists in Python</a></li>
-<li><a href="#org9819d46">3.3. Lesson 7: Creating and Working with Dictionaries in Python</a></li>
+<li><a href="#org7aea5c4">2.1. Lesson 2: Story Data in PYthon Script</a></li>
+<li><a href="#org4a9e780">2.2. Lesson 3: Interacting with Strings in a Python Script</a></li>
+<li><a href="#orga5d6e86">2.3. Lesson 4: Interacting with Numbers in Python (Integers and Floats)</a></li>
 </ul>
 </li>
-<li><a href="#orgf1691e1">4. PART 3 INTERACTING WITH DATA STRUCTURES IN PYTHON</a>
+<li><a href="#org8d4ce51">3. PART 2 DATA STRUCTURES IN PYTHON</a>
 <ul>
-<li><a href="#org716dd25">4.1. Lesson 8: Python Conditionals</a></li>
-<li><a href="#orgea10c10">4.2. Lesson 9: Python Loops</a></li>
-<li><a href="#orgc037868">4.3. Lesson 10: Python Functions</a></li>
-<li><a href="#orgc8c9b22">4.4. Lesson 11: Python Classes</a></li>
+<li><a href="#orgad3fa25">3.1. Lesson 5: Creating and Working with Types in Python</a></li>
+<li><a href="#orgd7269fb">3.2. Lesson 6: Creating and Working with Lists in Python</a></li>
+<li><a href="#orgb6c44db">3.3. Lesson 7: Creating and Working with Dictionaries in Python</a></li>
 </ul>
 </li>
-<li><a href="#orgafbd9b9">5. PART 4 WORKING WITH TEXT DATA</a>
+<li><a href="#org0cbe2e5">4. PART 3 INTERACTING WITH DATA STRUCTURES IN PYTHON</a>
 <ul>
-<li><a href="#orge8a3cf4">5.1. Lesson 12: Python and Text Files</a></li>
-<li><a href="#org3348631">5.2. Lesson 13: Python and Modules and Libraries</a></li>
-<li><a href="#org31ce355">5.3. Lesson 14: Working with Regex Library (1)</a></li>
-<li><a href="#org1a2ee11">5.4. Lesson 15: Working With Regex Library (2)</a></li>
+<li><a href="#org62df02d">4.1. Lesson 8: Python Conditionals</a></li>
+<li><a href="#org1335f73">4.2. Lesson 9: Python Loops</a></li>
+<li><a href="#orgd122739">4.3. Lesson 10: Python Functions</a></li>
+<li><a href="#org25d32cc">4.4. Lesson 11: Python Classes</a></li>
 </ul>
 </li>
-<li><a href="#org95144e1">6. PART 5 PYTHON AND WORKING WITH DATA STORED IN EXCEL</a>
+<li><a href="#org97a5a47">5. PART 4 WORKING WITH TEXT DATA</a>
 <ul>
-<li><a href="#orga225eef">6.1. Lesson 16: Reading Data from Excel Using the XLRD Library</a></li>
-<li><a href="#org9dd903b">6.2. Lesson 17: Searching Data Imported from Excel</a></li>
-<li><a href="#org0ca20c0">6.3. Lesson 18: Writing Data to Excel Files using the XLSWXWRITER Library</a></li>
+<li><a href="#org898ca34">5.1. Lesson 12: Python and Text Files</a></li>
+<li><a href="#org7261071">5.2. Lesson 13: Python and Modules and Libraries</a></li>
+<li><a href="#orgba93eaa">5.3. Lesson 14: Working with Regex Library (1)</a></li>
+<li><a href="#org35e186e">5.4. Lesson 15: Working With Regex Library (2)</a></li>
 </ul>
 </li>
-<li><a href="#org08a2706">7. PART 6 PYTHON AND WORKING WITH DATA FROM THE WEB</a>
+<li><a href="#org91717f7">6. PART 5 PYTHON AND WORKING WITH DATA STORED IN EXCEL</a>
 <ul>
-<li><a href="#org7bbb562">7.1. Lesson 19: Finding HTML Code from a website</a></li>
-<li><a href="#orgd4dd3af">7.2. Lesson 20: Using the Python Library Requests to Interact with a Website</a></li>
-<li><a href="#org1e4c6bd">7.3. Lesson 21: Using the Python Library Beautiful Soup to Rip Data from a Website</a></li>
+<li><a href="#org7039cc1">6.1. Lesson 16: Reading Data from Excel Using the XLRD Library</a></li>
+<li><a href="#orgb0da12d">6.2. Lesson 17: Searching Data Imported from Excel</a></li>
+<li><a href="#org61d0e78">6.3. Lesson 18: Writing Data to Excel Files using the XLSWXWRITER Library</a></li>
 </ul>
 </li>
-<li><a href="#orgb1d80e5">8. PART 7 PYTHON AND WAYS TO STORE DATA</a>
+<li><a href="#org707df79">7. PART 6 PYTHON AND WORKING WITH DATA FROM THE WEB</a>
 <ul>
-<li><a href="#org84c2f9f">8.1. Lesson 22: Storing Data in Text Files</a></li>
-<li><a href="#org21b7b38">8.2. Lesson 23: Storing Data in XML Files</a></li>
+<li><a href="#orgf8d2419">7.1. Lesson 19: Finding HTML Code from a website</a></li>
+<li><a href="#org807f4f0">7.2. Lesson 20: Using the Python Library Requests to Interact with a Website</a></li>
+<li><a href="#orgc6208fa">7.3. Lesson 21: Using the Python Library Beautiful Soup to Rip Data from a Website</a></li>
+</ul>
+</li>
+<li><a href="#org1b3e7a7">8. PART 7 PYTHON AND WAYS TO STORE DATA</a>
+<ul>
+<li><a href="#orgc984826">8.1. Lesson 22: Storing Data in Text Files</a></li>
+<li><a href="#org0adead2">8.2. Lesson 23: Storing Data in XML Files</a></li>
 </ul>
 </li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org392f8f7" class="outline-2">
-<h2 id="org392f8f7"><span class="section-number-2">1</span> Lesson 1 INTRODUCTION TO PYTHON FOR DIGITAL HUMANITIES</h2>
+<div id="outline-container-org6121e12" class="outline-2">
+<h2 id="org6121e12"><span class="section-number-2">1</span> Lesson 1 INTRODUCTION TO PYTHON FOR DIGITAL HUMANITIES</h2>
+<div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-org493a372" class="outline-2">
-<h2 id="org493a372"><span class="section-number-2">2</span> PART 1 WORKING WITH DATA IN PYTHON SCRIPTS</h2>
+<div id="outline-container-org2eaed1a" class="outline-3">
+<h3 id="org2eaed1a"><span class="section-number-3">1.1</span> Resources</h3>
+<div class="outline-text-3" id="text-1-1">
+<p>
+This notebook is based on lessons found here: <a href="https://pythonhumanities.com/">Python For Humanities</a>
+</p>
+</div>
+</div>
+<div id="outline-container-orga265c7f" class="outline-3">
+<h3 id="orga265c7f"><span class="section-number-3">1.2</span> Requirements</h3>
+</div>
+<div id="outline-container-org6208d46" class="outline-3">
+<h3 id="org6208d46"><span class="section-number-3">1.3</span> Acknowledgements</h3>
+</div>
+</div>
+<div id="outline-container-orgb452ac8" class="outline-2">
+<h2 id="orgb452ac8"><span class="section-number-2">2</span> PART 1 WORKING WITH DATA IN PYTHON SCRIPTS</h2>
 <div class="outline-text-2" id="text-2">
 </div>
-<div id="outline-container-orgaa0a738" class="outline-3">
-<h3 id="orgaa0a738"><span class="section-number-3">2.1</span> Lesson 2: Story Data in PYthon Script</h3>
+<div id="outline-container-org7aea5c4" class="outline-3">
+<h3 id="org7aea5c4"><span class="section-number-3">2.1</span> Lesson 2: Story Data in PYthon Script</h3>
 </div>
-<div id="outline-container-orgfb6f3ac" class="outline-3">
-<h3 id="orgfb6f3ac"><span class="section-number-3">2.2</span> Lesson 3: Interacting with Strings in a Python Script</h3>
+<div id="outline-container-org4a9e780" class="outline-3">
+<h3 id="org4a9e780"><span class="section-number-3">2.2</span> Lesson 3: Interacting with Strings in a Python Script</h3>
 </div>
-<div id="outline-container-orga8c4854" class="outline-3">
-<h3 id="orga8c4854"><span class="section-number-3">2.3</span> Lesson 4: Interacting with Numbers in Python (Integers and Floats)</h3>
+<div id="outline-container-orga5d6e86" class="outline-3">
+<h3 id="orga5d6e86"><span class="section-number-3">2.3</span> Lesson 4: Interacting with Numbers in Python (Integers and Floats)</h3>
 </div>
 </div>
-<div id="outline-container-orgd33e87e" class="outline-2">
-<h2 id="orgd33e87e"><span class="section-number-2">3</span> PART 2 DATA STRUCTURES IN PYTHON</h2>
+<div id="outline-container-org8d4ce51" class="outline-2">
+<h2 id="org8d4ce51"><span class="section-number-2">3</span> PART 2 DATA STRUCTURES IN PYTHON</h2>
 <div class="outline-text-2" id="text-3">
 </div>
-<div id="outline-container-org6d7dad2" class="outline-3">
-<h3 id="org6d7dad2"><span class="section-number-3">3.1</span> Lesson 5: Creating and Working with Types in Python</h3>
+<div id="outline-container-orgad3fa25" class="outline-3">
+<h3 id="orgad3fa25"><span class="section-number-3">3.1</span> Lesson 5: Creating and Working with Types in Python</h3>
 </div>
-<div id="outline-container-orgf8c2bb5" class="outline-3">
-<h3 id="orgf8c2bb5"><span class="section-number-3">3.2</span> Lesson 6: Creating and Working with Lists in Python</h3>
+<div id="outline-container-orgd7269fb" class="outline-3">
+<h3 id="orgd7269fb"><span class="section-number-3">3.2</span> Lesson 6: Creating and Working with Lists in Python</h3>
 </div>
-<div id="outline-container-org9819d46" class="outline-3">
-<h3 id="org9819d46"><span class="section-number-3">3.3</span> Lesson 7: Creating and Working with Dictionaries in Python</h3>
+<div id="outline-container-orgb6c44db" class="outline-3">
+<h3 id="orgb6c44db"><span class="section-number-3">3.3</span> Lesson 7: Creating and Working with Dictionaries in Python</h3>
 </div>
 </div>
-<div id="outline-container-orgf1691e1" class="outline-2">
-<h2 id="orgf1691e1"><span class="section-number-2">4</span> PART 3 INTERACTING WITH DATA STRUCTURES IN PYTHON</h2>
+<div id="outline-container-org0cbe2e5" class="outline-2">
+<h2 id="org0cbe2e5"><span class="section-number-2">4</span> PART 3 INTERACTING WITH DATA STRUCTURES IN PYTHON</h2>
 <div class="outline-text-2" id="text-4">
 </div>
-<div id="outline-container-org716dd25" class="outline-3">
-<h3 id="org716dd25"><span class="section-number-3">4.1</span> Lesson 8: Python Conditionals</h3>
+<div id="outline-container-org62df02d" class="outline-3">
+<h3 id="org62df02d"><span class="section-number-3">4.1</span> Lesson 8: Python Conditionals</h3>
 </div>
-<div id="outline-container-orgea10c10" class="outline-3">
-<h3 id="orgea10c10"><span class="section-number-3">4.2</span> Lesson 9: Python Loops</h3>
+<div id="outline-container-org1335f73" class="outline-3">
+<h3 id="org1335f73"><span class="section-number-3">4.2</span> Lesson 9: Python Loops</h3>
 </div>
-<div id="outline-container-orgc037868" class="outline-3">
-<h3 id="orgc037868"><span class="section-number-3">4.3</span> Lesson 10: Python Functions</h3>
+<div id="outline-container-orgd122739" class="outline-3">
+<h3 id="orgd122739"><span class="section-number-3">4.3</span> Lesson 10: Python Functions</h3>
 </div>
-<div id="outline-container-orgc8c9b22" class="outline-3">
-<h3 id="orgc8c9b22"><span class="section-number-3">4.4</span> Lesson 11: Python Classes</h3>
+<div id="outline-container-org25d32cc" class="outline-3">
+<h3 id="org25d32cc"><span class="section-number-3">4.4</span> Lesson 11: Python Classes</h3>
 </div>
 </div>
-<div id="outline-container-orgafbd9b9" class="outline-2">
-<h2 id="orgafbd9b9"><span class="section-number-2">5</span> PART 4 WORKING WITH TEXT DATA</h2>
+<div id="outline-container-org97a5a47" class="outline-2">
+<h2 id="org97a5a47"><span class="section-number-2">5</span> PART 4 WORKING WITH TEXT DATA</h2>
 <div class="outline-text-2" id="text-5">
 </div>
-<div id="outline-container-orge8a3cf4" class="outline-3">
-<h3 id="orge8a3cf4"><span class="section-number-3">5.1</span> Lesson 12: Python and Text Files</h3>
+<div id="outline-container-org898ca34" class="outline-3">
+<h3 id="org898ca34"><span class="section-number-3">5.1</span> Lesson 12: Python and Text Files</h3>
 </div>
-<div id="outline-container-org3348631" class="outline-3">
-<h3 id="org3348631"><span class="section-number-3">5.2</span> Lesson 13: Python and Modules and Libraries</h3>
+<div id="outline-container-org7261071" class="outline-3">
+<h3 id="org7261071"><span class="section-number-3">5.2</span> Lesson 13: Python and Modules and Libraries</h3>
 </div>
-<div id="outline-container-org31ce355" class="outline-3">
-<h3 id="org31ce355"><span class="section-number-3">5.3</span> Lesson 14: Working with Regex Library (1)</h3>
+<div id="outline-container-orgba93eaa" class="outline-3">
+<h3 id="orgba93eaa"><span class="section-number-3">5.3</span> Lesson 14: Working with Regex Library (1)</h3>
 </div>
-<div id="outline-container-org1a2ee11" class="outline-3">
-<h3 id="org1a2ee11"><span class="section-number-3">5.4</span> Lesson 15: Working With Regex Library (2)</h3>
+<div id="outline-container-org35e186e" class="outline-3">
+<h3 id="org35e186e"><span class="section-number-3">5.4</span> Lesson 15: Working With Regex Library (2)</h3>
 </div>
 </div>
-<div id="outline-container-org95144e1" class="outline-2">
-<h2 id="org95144e1"><span class="section-number-2">6</span> PART 5 PYTHON AND WORKING WITH DATA STORED IN EXCEL</h2>
+<div id="outline-container-org91717f7" class="outline-2">
+<h2 id="org91717f7"><span class="section-number-2">6</span> PART 5 PYTHON AND WORKING WITH DATA STORED IN EXCEL</h2>
 <div class="outline-text-2" id="text-6">
 </div>
-<div id="outline-container-orga225eef" class="outline-3">
-<h3 id="orga225eef"><span class="section-number-3">6.1</span> Lesson 16: Reading Data from Excel Using the XLRD Library</h3>
+<div id="outline-container-org7039cc1" class="outline-3">
+<h3 id="org7039cc1"><span class="section-number-3">6.1</span> Lesson 16: Reading Data from Excel Using the XLRD Library</h3>
 </div>
-<div id="outline-container-org9dd903b" class="outline-3">
-<h3 id="org9dd903b"><span class="section-number-3">6.2</span> Lesson 17: Searching Data Imported from Excel</h3>
+<div id="outline-container-orgb0da12d" class="outline-3">
+<h3 id="orgb0da12d"><span class="section-number-3">6.2</span> Lesson 17: Searching Data Imported from Excel</h3>
 </div>
-<div id="outline-container-org0ca20c0" class="outline-3">
-<h3 id="org0ca20c0"><span class="section-number-3">6.3</span> Lesson 18: Writing Data to Excel Files using the XLSWXWRITER Library</h3>
+<div id="outline-container-org61d0e78" class="outline-3">
+<h3 id="org61d0e78"><span class="section-number-3">6.3</span> Lesson 18: Writing Data to Excel Files using the XLSWXWRITER Library</h3>
 </div>
 </div>
-<div id="outline-container-org08a2706" class="outline-2">
-<h2 id="org08a2706"><span class="section-number-2">7</span> PART 6 PYTHON AND WORKING WITH DATA FROM THE WEB</h2>
+<div id="outline-container-org707df79" class="outline-2">
+<h2 id="org707df79"><span class="section-number-2">7</span> PART 6 PYTHON AND WORKING WITH DATA FROM THE WEB</h2>
 <div class="outline-text-2" id="text-7">
 </div>
-<div id="outline-container-org7bbb562" class="outline-3">
-<h3 id="org7bbb562"><span class="section-number-3">7.1</span> Lesson 19: Finding HTML Code from a website</h3>
+<div id="outline-container-orgf8d2419" class="outline-3">
+<h3 id="orgf8d2419"><span class="section-number-3">7.1</span> Lesson 19: Finding HTML Code from a website</h3>
 </div>
-<div id="outline-container-orgd4dd3af" class="outline-3">
-<h3 id="orgd4dd3af"><span class="section-number-3">7.2</span> Lesson 20: Using the Python Library Requests to Interact with a Website</h3>
+<div id="outline-container-org807f4f0" class="outline-3">
+<h3 id="org807f4f0"><span class="section-number-3">7.2</span> Lesson 20: Using the Python Library Requests to Interact with a Website</h3>
 </div>
-<div id="outline-container-org1e4c6bd" class="outline-3">
-<h3 id="org1e4c6bd"><span class="section-number-3">7.3</span> Lesson 21: Using the Python Library Beautiful Soup to Rip Data from a Website</h3>
+<div id="outline-container-orgc6208fa" class="outline-3">
+<h3 id="orgc6208fa"><span class="section-number-3">7.3</span> Lesson 21: Using the Python Library Beautiful Soup to Rip Data from a Website</h3>
 </div>
 </div>
-<div id="outline-container-orgb1d80e5" class="outline-2">
-<h2 id="orgb1d80e5"><span class="section-number-2">8</span> PART 7 PYTHON AND WAYS TO STORE DATA</h2>
+<div id="outline-container-org1b3e7a7" class="outline-2">
+<h2 id="org1b3e7a7"><span class="section-number-2">8</span> PART 7 PYTHON AND WAYS TO STORE DATA</h2>
 <div class="outline-text-2" id="text-8">
 </div>
-<div id="outline-container-org84c2f9f" class="outline-3">
-<h3 id="org84c2f9f"><span class="section-number-3">8.1</span> Lesson 22: Storing Data in Text Files</h3>
+<div id="outline-container-orgc984826" class="outline-3">
+<h3 id="orgc984826"><span class="section-number-3">8.1</span> Lesson 22: Storing Data in Text Files</h3>
 </div>
-<div id="outline-container-org21b7b38" class="outline-3">
-<h3 id="org21b7b38"><span class="section-number-3">8.2</span> Lesson 23: Storing Data in XML Files</h3>
+<div id="outline-container-org0adead2" class="outline-3">
+<h3 id="org0adead2"><span class="section-number-3">8.2</span> Lesson 23: Storing Data in XML Files</h3>
 </div>
 </div>
 </div>
 <div id="postamble" class="status">
+<p class="date">Date: Fri Nov 18 12:16:00 AM +0530 2022</p>
 <p class="author">Author: Theena Kumaragurunathan</p>
-<p class="date">Created: 2022-11-18 Fri 00:35</p>
+<p class="date">Created: 2022-11-18 Fri 01:07</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
